--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "mongoose": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
+    "react-scripts": "^2.1.3",
+    "react-uuid": "^2.0.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
