--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "^2.1.3",
     "react-uuid": "^2.0.0",
     "uuid": "^9.0.0",
